--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-	"presets" : ["es2015"]
+  "presets": [
+    [
+    "@babel/preset-env",{
+      "targets": {"node": "current"}
+    }
+  ]
+],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-arrow-functions"
+  ]
 }
