--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel server/ --out-dir dist/",
+    "postbuild": "sequelize db:migrate",
+    "start": "babel-node ./bin/www",
     "start:dev": "nodemon --exec babel-node ./bin/www",
     "testServ": "NODE_ENV=test npm run migrate:test && NODE_ENV=test npm run seed:test && NODE_ENV=test mocha -t 100000 --require babel-core/register test/* --exit",
     "seed:test": "sequelize db:migrate",
@@ -14,19 +17,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "pg": "^7.6.1",
     "pg-hstore": "^2.3.2",
     "save": "^2.3.3",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "sequelize-cli": "^5.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
