--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel server/ --out-dir dist/",
-    "postbuild": "sequelize db:migrate",
+    "heroku-postbuild": "sequelize db:migrate",
     "start": "babel-node ./bin/www",
     "start:dev": "nodemon --exec babel-node ./bin/www",
     "testServ": "NODE_ENV=test npm run migrate:test && NODE_ENV=test npm run seed:test && NODE_ENV=test mocha -t 100000 --require babel-core/register test/* --exit",
